--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@ body {
 }
 
 h1 {
-  color: rgba(117, 119, 112, 0.952);
+  color: white;
   font-size: 26px;
   font-weight: 100;
   line-height: 10px;
@@ -12,7 +12,7 @@ h1 {
 }
 
 h2 {
-  color: rgba(103, 104, 96, 0.952);
+  color: white;
   font-size: 24px;
   font-weight: 100;
   line-height: 10px;
@@ -59,6 +59,7 @@ li {
 .col {
   padding: 15px;
   font-size: 13px;
+  color: white;
 }
 
 img {
