--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ h1 {
   font-size: 26px;
   font-weight: 100;
   line-height: 10px;
-  margin: auto 0;
+  margin-bottom: 20px;
   padding: 5px;
 }
 
@@ -16,7 +16,7 @@ h2 {
   font-size: 24px;
   font-weight: 100;
   line-height: 10px;
-  margin: auto 0;
+  margin-top: 20px;
   padding: 10px;
 }
 
