--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,8 @@ h1 {
   font-size: 26px;
   font-weight: 100;
   line-height: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
   padding: 5px;
 }
 
