--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,7 @@ li {
   margin: auto 0;
   border-radius: 15px;
   max-width: 500px;
-  background-image: url("https://images.pexels.com/photos/3617500/pexels-photo-3617500.jpeg?cs=srgb&dl=pexels-benjamin-suter-3617500.jpg&fm=jpg");
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/d/d0/Background-clouds.jpg");
   background-size: cover;
 }
 
